force-app/main/default/objects/TwhatsApp_Message__e/TwhatsApp_Message__e.object-meta.xml
<CustomObject>
    <label>TwhatsApp Message</label>
    <pluralLabel>TwhatsApp Messages</pluralLabel>
</CustomObject>