force-app/main/default/objects/TwhatsApp_Message__e/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>