force-app/main/default/objects/TwhatsApp_Message__e/fields/Inbound__c.field-meta.xml
<CustomField>
    <fullName>Inbound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inbound</label>
    <type>Checkbox</type>
</CustomField>